--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 <div class="feed">
                     <div class="article_card">
                         <img class="article_img" src="image.jpg">
-                        <a href="#" class="article_info">
+                        <a href="post-detail.html" class="article_info">
                             <div class="article_title">В Австралии обязали ИТ-компании платить за ссылки на новости: в итоге Facebook «запретила» СМИ, а Google пошла на сделку </div>
                             <div class="article_description">Google и Facebook хотят заставить делиться рекламной выручкой с австралийскими медиа, что может создать прецедент для подобных законов по всему миру</div>
                         </a>
